<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SongUploadFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:textSize="24sp"
        android:textStyle="bold"
        
        android:text="@string/add_recording" />

    <Button
        android:textAllCaps="false"
        android:stateListAnimator="@null"
        android:textColor="@color/white"
        android:id="@+id/select_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        
        android:text="@string/select_song"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center|start"
        android:layout_marginTop="150dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:textAllCaps="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:textColor="@color/white"
                android:id="@+id/sixties"
                android:text="@string/sixties"/>

            <Button
                android:textAllCaps="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:textColor="@color/white"
                android:id="@+id/seventies"
                android:text="@string/seventies"/>

            <Button
                android:textAllCaps="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:textColor="@color/white"
                android:id="@+id/eighties"
                android:text="@string/eighties"/>

            <Button
                android:textAllCaps="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:textColor="@color/white"
                android:id="@+id/nineties"
                android:text="@string/nineties"/>

            <Button
                android:textAllCaps="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:textColor="@color/white"
                android:id="@+id/noughties"
                android:text="@string/noughties"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:textAllCaps="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:textColor="@color/white"
                android:id="@+id/tens"
                android:text="@string/tens"/>

            <Button
                android:textAllCaps="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:textColor="@color/white"
                android:id="@+id/acoustic"
                android:text="@string/acoustic"/>

            <Button
                android:textAllCaps="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:textColor="@color/white"
                android:id="@+id/electric"
                android:text="@string/electric"/>

            <Button
                android:textAllCaps="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:textColor="@color/white"
                android:id="@+id/bass"
                android:text="@string/bass"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:textAllCaps="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:textColor="@color/white"
                android:id="@+id/fingerstyle"
                android:text="@string/fingerstyle"/>

            <Button
                android:textAllCaps="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:textColor="@color/white"
                android:id="@+id/strum"
                android:text="@string/strum"/>

            <Button
                android:textAllCaps="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:textColor="@color/white"
                android:id="@+id/jazz"
                android:text="@string/jazz"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:textAllCaps="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:textColor="@color/white"
                android:id="@+id/country"
                android:text="@string/country"/>

            <Button
                android:textAllCaps="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:textColor="@color/white"
                android:id="@+id/metal"
                android:text="@string/metal"/>

            <Button
                android:textAllCaps="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:textColor="@color/white"
                android:id="@+id/funk"
                android:text="@string/funk"/>

            <Button
                android:textAllCaps="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:textColor="@color/white"
                android:id="@+id/blues"
                android:text="@string/blues"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:text="@string/back"
        android:layout_gravity="bottom|start"
        
        android:layout_marginBottom="80dp"
        android:textColor="@color/white"
        android:layout_marginStart="50dp"/>

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finish"
        android:text="@string/finish"
        android:layout_gravity="bottom|end"
        
        android:layout_marginBottom="80dp"
        android:textColor="@color/white"
        android:layout_marginEnd="50dp"/>

</FrameLayout>