<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChordsUploadFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">
        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center|top"
            android:textSize="16sp">

            <TextView
                android:id="@+id/song_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/artist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/add_line"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="?android:selectableItemBackground"
                    android:src="@drawable/ic__add"
                    android:contentDescription="@string/add_strings_layout" />

                <ImageButton
                    android:id="@+id/remove_line"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:background="?android:selectableItemBackground"
                    android:src="@drawable/ic__remove"
                    android:contentDescription="@string/add_strings_layout" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_chords"
        android:text="@string/back"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="80dp"
        android:textColor="@color/white"
        android:layout_marginStart="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_chords"
        android:text="@string/next"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="80dp"
        android:textColor="@color/white"
        android:layout_marginEnd="50dp"/>

</FrameLayout>